# rag2025

./: .env.example  .gitignore  .pre-commit-config.yaml  ADAPTERS_IMPLEMENTATION_COMPLETE.md  COMMENTAIRES_README.md  CONFIGURATION_API_KEYS.md  CONFIG_DOCLING_TESSERACT.md  CORRECTIONS_SUMMARY.md  CORRECTION_JSON_PARSING_SUMMARY.md  EMBEDDING_PROVIDERS_INTEGRATION.md  FIX_DOCLING_OCRMAC_ERROR.md  FIX_LLM_CLASSIFICATION.md  FIX_LLM_JSON_PARSING.md  FIX_MARKDOWN_CODE_BLOCKS.md  FIX_TESSERACT_LANG_LIST.md  GESTION_FICHIERS.md  GIT_SYNC_CONFIGURATION_EXTRACTION.md  GIT_SYNC_IMPLEMENTATION_COMPLETE.md  GUIDE_UTILISATION.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LLM_GUIDED_CHUNKING.md  MODEL_PROVIDERS_REFACTORING_COMPLETE.md  MODE_WATCH.md  PROGRESSION_LLM_GUIDED.md  QUICK_FIXES.md  QUICK_START.md  RATE_LIMITING.md  README.md  README_SPHINX.md  RÉSUMÉ_CORRECTIONS_20251031.md  RÉSUMÉ_FINAL_20251031.md  SAUVEGARDE_CHUNKS.md  SAUVEGARDE_TEXTE_EXTRAIT.md  SESSION_GIT_SYNC_EXTRACTION.md  SESSION_SUMMARY_REFACTORING_AND_EXTENSIONS.md  VERIFICATION_FINALE.md  check_dependencies.py  clean_cache.sh  install.sh  (+14 more)
.claude/: CLAUDE.md
.github/workflows/: ci.yml
config/: 01_monitoring.yaml  02_preprocessing.yaml  03_chunking.yaml  04_enrichment.yaml  05_audit.yaml  06_embedding.yaml  07_normalization.yaml  08_vector_storage.yaml  README_EXTENSIONS_SUPPORTEES.md  README_FALLBACK_PROFILES.md  README_LLM_CONFIG.md  README_VLM_ARCHITECTURE.md  global.yaml  synchrogithub.yaml
docs/source/: conf.py  index.rst  modules.rst
logs/: audit_trail.jsonl
rag_framework/: __init__.py  cli.py  config.py  config_adapter.py  exceptions.py  git_sync.py  git_sync_handler.py  pipeline.py  types.py  validation.py
rag_framework/cli/: __init__.py  git_sync_cli.py  main.py
rag_framework/extractors/: __init__.py  base.py  docling_extractor.py  docx_extractor.py  fallback_manager.py  html_extractor.py  image_extractor.py  marker_extractor.py  ocr_extractor.py  pandas_extractor.py  pdfplumber_extractor.py  pptx_extractor.py  pymupdf_extractor.py  pypdf2_extractor.py  text_extractor.py  vlm_extractor.py
rag_framework/git_sync/: __init__.py  sync_manager.py  watcher.py
rag_framework/models/: __init__.py  loader.py
rag_framework/preprocessing/: __init__.py  config.py  fallback_chain.py  manager.py  router.py
rag_framework/preprocessing/adapters/: __init__.py  base.py
rag_framework/preprocessing/adapters/html/: beautifulsoup.py
rag_framework/preprocessing/adapters/markdown/: __init__.py  markdown_parser.py
rag_framework/preprocessing/adapters/office/: docx.py  pptx.py  unstructured.py  xlsx.py
rag_framework/preprocessing/adapters/pdf/: marker.py  pymupdf.py
rag_framework/preprocessing/adapters/text/: __init__.py  csv_parser.py  txt.py
rag_framework/preprocessing/embeddings/: __init__.py  loader.py
rag_framework/preprocessing/memory/: optimizer.py
rag_framework/preprocessing/metrics/: collector.py
rag_framework/preprocessing/ocr/: base.py  easyocr.py  paddleocr.py  rapidocr.py  tesseract.py
rag_framework/steps/: __init__.py  base_step.py  step_01_monitoring.py  step_02_preprocessing.py  step_03_chunking.py  step_04_enrichment.py  step_05_audit.py  step_06_embedding.py  step_07_normalization.py  step_08_vector_storage.py
rag_framework/utils/: __init__.py  file_manager.py  logger.py  secrets.py  validators.py
tests/: __init__.py  conftest.py  test_docling_osd_error.py
tests/data/: sample.txt
tests/data/tests/: ANSSI-NP-IGI1300-listing_des_exigences-v0.4.xlsx  anssi-guide_protection_si_essentiels-liste_recommandations-v1.0.xlsx  cdc.md  direction-interministerielle-du-numerique-datasets-2025-10-13-05-59.csv  dossier_architecture_securite_nginx.md
tests/integration/: __init__.py  test_rag_evaluation.py
tests/unit/: test_config.py  test_features_implementation.py  test_git_sync.py  test_pipeline.py  test_preprocessing.py
tests/unit/test_steps/: __init__.py  test_step_01_monitoring.py
