[project]
name = "rag-framework"
version = "0.1.0"
description = "Framework RAG modulaire pour l'audit et la conformité réglementaire"
authors = [
    { name = "RAG Team", email = "team@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["rag", "llm", "audit", "compliance", "langchain", "chromadb"]

dependencies = [
    # Core RAG
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    # LLM & Embeddings
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "llama-cpp-python>=0.2.0",
    # Vector Store
    "chromadb>=1.3.0",
    # Document Processing - PDF
    "pypdf>=3.0.0",
    # PDF simple et rapide
    "pdfplumber>=0.11.0",
    # PDF avec tableaux et extraction avancée
    "pymupdf>=1.24.0",
    # PDF rapide (fitz)
    "marker-pdf>=1.10.1",
    # PDF ML haute qualité
    "docling>=1.0.0",
    # PDF/Office avec OCR et layout analysis
    "pdf2image>=1.16.0",
    # Conversion PDF vers images
    # Document Processing - Office
    "python-docx>=1.1.0",
    # Word (.docx, .doc)
    "python-pptx>=0.6.23",
    # PowerPoint (.pptx, .ppt)
    "openpyxl>=3.1.0",
    # Excel (.xlsx) - utilisé par pandas
    "pandas>=2.0.0",
    # CSV/Excel avec analyse de données
    # Document Processing - OCR et Images
    "pytesseract>=0.3.10",
    # OCR pour images et PDF scannés
    "easyocr>=1.7.0",
    # OCR précis multilingue
    "paddleocr>=2.7.0",
    # OCR rapide et efficace
    "rapidocr-onnxruntime>=1.3.0",
    # OCR ultra rapide avec ONNX
    "Pillow>=10.0.0",
    # Manipulation d'images
    # Document Processing - HTML/XML
    "beautifulsoup4>=4.12.0",
    # Parsing HTML/XML
    "lxml>=5.0.0",
    # Parser XML rapide pour BeautifulSoup
    "markdown>=3.5.0",
    # Markdown processing
    "unstructured>=0.10.0",
    # Universal document parser with fallback
    # Configuration & Validation
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    # Monitoring
    "watchdog>=6.0.0",
    # Utilities
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "langchain-text-splitters>=1.0.0",
    "gitpython>=3.1.45",
]

[project.optional-dependencies]
dev = [
    # Formatting & Linting
    "ruff>=0.4.0",

    # Type Checking
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",

    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.98.0",
    "psutil>=5.9.0",

    # RAG Evaluation
    "ragas>=0.1.0",

    # Documentation
    "pdoc>=14.0.0",

    # Pre-commit
    "pre-commit>=3.6.0",
]

qdrant = [
    "qdrant-client>=1.7.0",
]

[project.scripts]
rag-pipeline = "rag_framework.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "RUF", # Ruff-specific rules
]
ignore = [
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "marker_pdf.*",
    "marker.*",
    "chromadb.*",
    "langchain.*",
    "langchain_community.*",
    "langchain_openai.*",
    "sentence_transformers.*",
    "watchdog.*",
    "feedparser.*",
    "ragas.*",
    "fitz.*",
    "docling.*",
    "unstructured.*",
    "easyocr.*",
    "paddleocr.*",
    "rapidocr.*",
    "pytesseract.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=rag_framework",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["rag_framework"]
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.rye]
dev-dependencies = [
    "types-psutil>=7.0.0.20251001",
]
